--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 body {
   background-color: #3a3a3a;
   color: #fff;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .ball {
@@ -12,4 +17,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-size: 22px;
+  font-weight: bold;
 }
